--- a/trunk/user/busybox/Makefile
+++ b/trunk/user/busybox/Makefile
@@ -4,8 +4,11 @@ all:
 	$(MAKE) -C $(SRC_NAME)
 
 clean:
-	$(MAKE) -C $(SRC_NAME) distclean
+	$(MAKE) -C $(SRC_NAME) clean
 
+distclean:
+	$(MAKE) -C $(SRC_NAME) distclean
+	
 romfs:
 	$(MAKE) -C $(SRC_NAME) CONFIG_PREFIX=$(ROMFSDIR) install
 
