--- a/trunk/configs/templates/K2P_DRV.config
+++ b/trunk/configs/templates/K2P_DRV.config
@@ -26,11 +26,10 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 ### Enable MT7621 CPU sleep mode (downclock to 220MHz on idle)
 #CONFIG_FIRMWARE_CPU_SLEEP=y
 
-### Kernel driver select for WiFi AP 2.4GHz
-CONFIG_FIRMWARE_WIFI2_DRIVER=4.4.2.1
-
-### Kernel driver select for WiFi AP 5GHz
-CONFIG_FIRMWARE_WIFI5_DRIVER=4.4.2.1
+### Kernel driver select for WiFi AP 2.4GHz/5GHz
+### 4.4.1.2 = MT7615 v4.4.1.2
+### 4.4.2.1 = MT7615 v4.4.2.1
+CONFIG_FIRMWARE_WIFI_DRIVER=4.4.2.1
 
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
