--- a/trunk/user/util-linux/Makefile
+++ b/trunk/user/util-linux/Makefile
@@ -5,8 +5,20 @@ THISDIR = $(shell pwd)
 CFLAGS += -ffunction-sections -fdata-sections
 LDFLAGS += -Wl,--gc-sections
 
+BLKID_ENABLED=n
+
+ifdef CONFIG_MMC_BLOCK
+BLKID_ENABLED=y
+endif
+ifdef CONFIG_BLK_DEV_SD
+BLKID_ENABLED=y
+endif
+ifdef CONFIG_MTD_UBI
+BLKID_ENABLED=y
+endif
+
 all: config_test
-	$(MAKE) -C $(SRC_NAME) && \
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME) && \
 	$(MAKE) -C $(SRC_NAME) install DESTDIR=$(THISDIR)/install && \
 	cp -rfP $(THISDIR)/install/lib $(STAGEDIR) && \
 	cp -rfP $(THISDIR)/install/include $(STAGEDIR)
@@ -69,6 +81,8 @@ clean:
 	rm -rf install
 
 romfs:
+	$(ROMFSINST) $(THISDIR)/install/bin/hexdump /usr/bin/hexdump
+ifeq ($(BLKID_ENABLED),y)
 	$(ROMFSINST) $(THISDIR)/install/sbin/blkid /sbin/blkid
 	$(ROMFSINST) $(THISDIR)/install/lib/libblkid.so.1.1.0 /lib/libblkid.so.1.1.0
 	$(ROMFSINST) $(THISDIR)/install/lib/libuuid.so.1.3.0 /lib/libuuid.so.1.3.0
@@ -76,3 +90,4 @@ romfs:
 	$(ROMFSINST) -s libblkid.so.1.1.0 /lib/libblkid.so.1
 	$(ROMFSINST) -s libuuid.so.1.3.0 /lib/libuuid.so
 	$(ROMFSINST) -s libuuid.so.1.3.0 /lib/libuuid.so.1
+endif
