--- a/trunk/libs/libcurl/Makefile
+++ b/trunk/libs/libcurl/Makefile
@@ -2,7 +2,7 @@ SRC_NAME=curl-7.61.0
 SRC_URL=https://github.com/curl/curl/releases/download/curl-7_61_0/curl-7.61.0.tar.gz
 
 all: download_test extract_test config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 	
 download_test:
 	( if [ ! -f $(SRC_NAME).tar.gz ]; then \
