--- a/trunk/libs/libjson-c/Makefile
+++ b/trunk/libs/libjson-c/Makefile
@@ -3,7 +3,7 @@ SRC_URL=https://github.com/json-c/json-c/archive/json-c-0.13.1-20180305.tar.gz
 ARCHIVE_NAME=json-c-0.13.1-20180305
 
 all: download_test extract_test config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 download_test:
 	( if [ ! -f $(ARCHIVE_NAME).tar.gz ]; then \
