--- a/trunk/libs/libsodium/Makefile
+++ b/trunk/libs/libsodium/Makefile
@@ -2,7 +2,7 @@ SRC_NAME=libsodium-1.0.16
 SRC_URL=https://download.libsodium.org/libsodium/releases/libsodium-1.0.16.tar.gz
 
 all: download_test extract_test config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 download_test:
 	( if [ ! -f $(SRC_NAME).tar.gz ]; then \
