--- a/trunk/user/iperf/Makefile
+++ b/trunk/user/iperf/Makefile
@@ -6,7 +6,7 @@ CXXFLAGS += -fno-rtti -D_GNU_SOURCE
 LIBS = -lpthread -lm
 
 all: download_test extract_test config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 download_test:
 	( if [ ! -f $(SRC_NAME).tar.gz ]; then \
