--- a/trunk/libs/libevent/Makefile
+++ b/trunk/libs/libevent/Makefile
@@ -1,7 +1,7 @@
 SRC_NAME=libevent-2.0.21-stable
 
 all: config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 config_test:
 	( if [ -f ./config_done ]; then \
