--- a/trunk/libs/libncurses/Makefile
+++ b/trunk/libs/libncurses/Makefile
@@ -2,7 +2,7 @@ SRC_NAME=ncurses-6.1
 SRC_URL=https://github.com/mirror/ncurses/archive/v6.1.zip
 
 all: download_test extract_test config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 download_test:
 	( if [ ! -f $(SRC_NAME).zip ]; then \
