--- a/trunk/user/iperf3/Makefile
+++ b/trunk/user/iperf3/Makefile
@@ -3,7 +3,7 @@ SRC_URL = https://iperf.fr/download/source/iperf-3.1.3-source.tar.gz
 THISDIR = $(shell pwd)
 
 all: download_test extract_test config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 download_test:
 	( if [ ! -f $(SRC_NAME).tar.gz ]; then \
