--- a/trunk/libs/libexif/Makefile
+++ b/trunk/libs/libexif/Makefile
@@ -2,7 +2,7 @@ SRC_NAME=libexif-0.6.21
 SRC_URL=https://sourceforge.net/projects/libexif/files/libexif/0.6.21/libexif-0.6.21.tar.bz2
 
 all: download_test extract_test config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 download_test:
 	( if [ ! -f $(SRC_NAME).tar.bz2 ]; then \
