--- a/trunk/libs/libusb-1.0/Makefile
+++ b/trunk/libs/libusb-1.0/Makefile
@@ -2,7 +2,7 @@ SRC_NAME=libusb-1.0.22
 SRC_URL=https://github.com/libusb/libusb/releases/download/v1.0.22/libusb-1.0.22.tar.bz2
 
 all: download_test extract_test config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 download_test:
 	( if [ ! -f $(SRC_NAME).tar.bz2 ]; then \
