--- a/trunk/libs/libwebsockets/Makefile
+++ b/trunk/libs/libwebsockets/Makefile
@@ -2,7 +2,7 @@ SRC_NAME=libwebsockets-2.4.2
 SRC_URL=https://github.com/warmcat/libwebsockets/archive/v2.4.2.tar.gz
 
 all: download_test extract_test config_test
-	$(MAKE) -C $(SRC_NAME)/build
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)/build
 
 download_test:
 	( if [ ! -f $(SRC_NAME).tar.gz ]; then \
