--- a/trunk/user/mtr/Makefile
+++ b/trunk/user/mtr/Makefile
@@ -3,7 +3,7 @@ SRC_NAME = mtr-0.92
 THISDIR = $(shell pwd)
 
 all: config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 config_test:
 	( if [ -f ./config_done ]; then \
