--- a/trunk/libs/libflac/Makefile
+++ b/trunk/libs/libflac/Makefile
@@ -2,7 +2,7 @@ SRC_NAME=flac-1.3.2
 SRC_URL=https://ftp.osuosl.org/pub/xiph/releases/flac/$(SRC_NAME).tar.xz
 
 all: download_test extract_test config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 download_test:
 	( if [ ! -f $(SRC_NAME).tar.xz ]; then \
