--- a/trunk/libs/libsodium/Makefile
+++ b/trunk/libs/libsodium/Makefile
@@ -24,6 +24,7 @@ config_test:
 configure:
 	( cd $(SRC_NAME) ; \
 	./configure \
+		--disable-ssp \
 		--prefix=$(STAGEDIR) \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
