--- a/trunk/tools/travis/pdv-7628-ci.yml
+++ b/trunk/tools/travis/pdv-7628-ci.yml
@@ -9,7 +9,7 @@ compiler:
 
 install:
     - sudo apt-get update -qq
-    - sudo apt-get install -qq p7zip-full autoconf automake bison build-essential flex gawk gettext gperf libtool pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev texinfo python-docutils libncurses5-dev autopoint curl
+    - sudo apt-get install -qq p7zip-full autoconf automake bison build-essential flex gawk gettext gperf libtool pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev texinfo python-docutils libncurses5-dev autopoint curl libltdl-dev cmake
 
 before_script:
     - cd /opt && sudo mkdir images && sudo git clone --depth=1 https://github.com/hanwckf/rt-n56u.git
