mt7615: enable VENDOR_FEATURE6_SUPPORT travis ci: change build order of mt7621 target

--- a/trunk/tools/travis/pdv-7621-ci.yml
+++ b/trunk/tools/travis/pdv-7621-ci.yml
@@ -19,11 +19,11 @@ before_script:
     - cd /opt/rt-n56u/trunk/
 
 script:
-    - sudo bash ./build_firmware_nohup WR1200JS && sudo cp -f images/*.trx /opt/images
-    - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup NEWIFI3 && sudo cp -f images/*.trx /opt/images
-    - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup K2P && sudo cp -f images/*.trx /opt/images
+    - sudo bash ./build_firmware_nohup K2P && sudo cp -f images/*.trx /opt/images
     - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup K2P_DRV && sudo cp -f images/*.trx /opt/images/K2P_DRV_3.4.3.9-099.trx
     - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup K2P_nano && sudo cp -f images/*.trx /opt/images/K2P_nano_3.4.3.9-099.trx
+    - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup WR1200JS && sudo cp -f images/*.trx /opt/images
+    - sudo bash ./clear_tree_simple >/dev/null 2>&1 && sudo bash ./build_firmware_nohup NEWIFI3 && sudo cp -f images/*.trx /opt/images
 
 after_script:
     - GIT_VERSION=`git rev-parse --short=7 HEAD 2>/dev/null` && [ -n "$GIT_VERSION" ] && image_name=images_mt7621_$GIT_VERSION || image_name=images_mt7621
