curl: link with mbedtls instead of openssl ss: bump to 3.2.3

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -144,7 +144,7 @@ endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_CURL),y)
 LIBS_INCLUDE_CURL=y
-LIBS_INCLUDE_LIBSSL=y
+LIBS_INCLUDE_MBEDTLS=y
 endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_HTOP),y)
@@ -211,6 +211,7 @@ dir_$(LIBS_INCLUDE_LIBPCRE)			+= libpcre
 dir_$(LIBS_INCLUDE_LIBEV)			+= libev
 dir_$(LIBS_INCLUDE_LIBSODIUM)			+= libsodium
 dir_$(LIBS_INCLUDE_LIBUDNS)			+= libudns
+dir_$(LIBS_INCLUDE_MBEDTLS)			+= mbedtls
 dir_$(LIBS_INCLUDE_CURL)			+= libcurl
 dir_y						+= libnfnetlink
 ifeq ($(CONFIG_WITHOUT_IW),y)
@@ -238,7 +239,6 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)	+= libevent
 # aria2 shared libs
 dir_$(LIBS_INCLUDE_LIBXML2)		+= libxml2
 
-dir_$(LIBS_INCLUDE_MBEDTLS)		+= mbedtls
 dir_$(LIBS_INCLUDE_C_ARES)		+= c-ares
 dir_$(LIBS_INCLUDE_READLINE)		+= readline
 
