--- a/trunk/libs/libcurl/Makefile
+++ b/trunk/libs/libcurl/Makefile
@@ -53,9 +53,10 @@ configure:
 		--without-libssh2 \
 		--without-krb4 \
 		--without-nss \
+		--without-ssl \
 		--with-random=/dev/urandom \
 		--with-zlib=$(STAGEDIR) \
-		--with-ssl=$(STAGEDIR) \
+		--with-mbedtls=$(STAGEDIR) \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
 	)
