--- a/trunk/libs/mbedtls/Makefile
+++ b/trunk/libs/mbedtls/Makefile
@@ -30,6 +30,8 @@ configure:
 	-DUSE_STATIC_MBEDTLS_LIBRARY=Off \
 	-DENABLE_TESTING=Off \
 	-DENABLE_PROGRAMS=Off \
+	-DLINK_WITH_PTHREAD=On \
+	-DENABLE_ZLIB_SUPPORT=On \
 	.. \
 	)
 
