openssl: fix compile error

--- a/trunk/libs/libssl/Makefile
+++ b/trunk/libs/libssl/Makefile
@@ -38,6 +38,7 @@ OPENSSL_CIPHERS += no-ec
 endif
 
 all: config_test
+	$(MAKE) -C $(SRC_NAME) depend
 	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 config_test:
