softethervpn: switch to rtm version; add vpnserver; add source

--- a/trunk/configs/templates/K2P_nano.config
+++ b/trunk/configs/templates/K2P_nano.config
@@ -235,6 +235,8 @@ CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=n
 
 CONFIG_FIRMWARE_INCLUDE_SSSERVER=n
 
+CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER=n
+
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT=n
 
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD=n
