--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -182,6 +182,13 @@ LIBS_INCLUDE_LIBICONV=y
 LIBS_INCLUDE_NCURSES=y
 endif
 
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER),y)
+LIBS_INCLUDE_READLINE=y
+LIBS_INCLUDE_LIBSSL=y
+LIBS_INCLUDE_LIBICONV=y
+LIBS_INCLUDE_NCURSES=y
+endif
+
 ifeq ($(CONFIG_FIRMWARE_ENABLE_FAT),y)
 LIBS_INCLUDE_LIBICONV=y
 endif
