--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -103,6 +103,10 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT),y)
 SOFTETHERVPN_ENABLE=y
 endif
 
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER),y)
+SOFTETHERVPN_ENABLE=y
+endif
+
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SSSERVER),y)
 SHADOWSOCKS_ENABLE=y
 endif
