--- a/trunk/configs/templates/PSG1218_nano.config
+++ b/trunk/configs/templates/PSG1218_nano.config
@@ -231,6 +231,8 @@ CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=n
 
 CONFIG_FIRMWARE_INCLUDE_SSSERVER=n
 
+CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER=n
+
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT=n
 
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD=n
