--- a/trunk/configs/templates/WR1200JS.config
+++ b/trunk/configs/templates/WR1200JS.config
@@ -236,6 +236,8 @@ CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y
 
 CONFIG_FIRMWARE_INCLUDE_SSSERVER=y
 
+CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER=n
+
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT=n
 
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD=n
