softethervpn: fix parallel make.1

--- a/trunk/user/softethervpn/Makefile
+++ b/trunk/user/softethervpn/Makefile
@@ -21,6 +21,16 @@ extract_test:
 	( if [ ! -d $(SRC_VER) ]; then \
 		tar xf $(SRC_NAME).tar.gz; \
 		patch --binary -d $(SRC_VER) -p1 < softethervpn-$(SRC_VER).patch ; \
+		mkdir -p $(SRC_VER)/tmp/ ; \
+		mkdir -p $(SRC_VER)/tmp/objs/ ; \
+		mkdir -p $(SRC_VER)/tmp/objs/Mayaqua/ ; \
+		mkdir -p $(SRC_VER)/tmp/objs/Cedar/ ; \
+		mkdir -p $(SRC_VER)/tmp/as/ ; \
+		mkdir -p $(SRC_VER)/bin/ ; \
+		mkdir -p $(SRC_VER)/bin/vpnserver/ ; \
+		mkdir -p $(SRC_VER)/bin/vpnclient/ ; \
+		mkdir -p $(SRC_VER)/bin/vpnbridge/ ; \
+		mkdir -p $(SRC_VER)/bin/vpncmd/ ; \
 	fi )
 
 put_hamcore:
