--- a/trunk/configs/boards/MI-MINI/kernel-3.4.x.config
+++ b/trunk/configs/boards/MI-MINI/kernel-3.4.x.config
@@ -1522,7 +1522,8 @@ CONFIG_EXFAT_DISCARD=y
 # CONFIG_EXFAT_DEBUG_MSG is not set
 CONFIG_EXFAT_DEFAULT_CODEPAGE=866
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
-# CONFIG_UFSD_FS is not set
+CONFIG_UFSD_FS=m
+CONFIG_UFSD_USE_NLS=y
 # CONFIG_NTFS_FS is not set
 
 #
@@ -1586,7 +1587,7 @@ CONFIG_NLS_CODEPAGE_437=y
 # CONFIG_NLS_CODEPAGE_865 is not set
 CONFIG_NLS_CODEPAGE_866=y
 # CONFIG_NLS_CODEPAGE_869 is not set
-# CONFIG_NLS_CODEPAGE_936 is not set
+CONFIG_NLS_CODEPAGE_936=y
 # CONFIG_NLS_CODEPAGE_950 is not set
 # CONFIG_NLS_CODEPAGE_932 is not set
 # CONFIG_NLS_CODEPAGE_949 is not set
