--- a/trunk/configs/boards/PSG1218/kernel-3.4.x.config
+++ b/trunk/configs/boards/PSG1218/kernel-3.4.x.config
@@ -1129,7 +1129,8 @@ CONFIG_INOTIFY_USER=y
 # CONFIG_MSDOS_FS is not set
 # CONFIG_VFAT_FS is not set
 # CONFIG_EXFAT_FS is not set
-# CONFIG_UFSD_FS is not set
+CONFIG_UFSD_FS=m
+CONFIG_UFSD_USE_NLS=y
 # CONFIG_NTFS_FS is not set
 
 #
@@ -1193,7 +1194,7 @@ CONFIG_NLS_CODEPAGE_437=y
 # CONFIG_NLS_CODEPAGE_865 is not set
 CONFIG_NLS_CODEPAGE_866=y
 # CONFIG_NLS_CODEPAGE_869 is not set
-# CONFIG_NLS_CODEPAGE_936 is not set
+CONFIG_NLS_CODEPAGE_936=y
 # CONFIG_NLS_CODEPAGE_950 is not set
 # CONFIG_NLS_CODEPAGE_932 is not set
 # CONFIG_NLS_CODEPAGE_949 is not set
