--- a/trunk/configs/boards/HC5661A/kernel-3.4.x.config
+++ b/trunk/configs/boards/HC5661A/kernel-3.4.x.config
@@ -1128,7 +1128,8 @@ CONFIG_EXFAT_DISCARD=y
 # CONFIG_EXFAT_DEBUG_MSG is not set
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
-# CONFIG_UFSD_FS is not set
+CONFIG_UFSD_FS=m
+CONFIG_UFSD_USE_NLS=y
 # CONFIG_NTFS_FS is not set
 
 #
@@ -1192,7 +1193,7 @@ CONFIG_NLS_CODEPAGE_437=y
 # CONFIG_NLS_CODEPAGE_865 is not set
 # CONFIG_NLS_CODEPAGE_866 is not set
 # CONFIG_NLS_CODEPAGE_869 is not set
-# CONFIG_NLS_CODEPAGE_936 is not set
+CONFIG_NLS_CODEPAGE_936=y
 # CONFIG_NLS_CODEPAGE_950 is not set
 # CONFIG_NLS_CODEPAGE_932 is not set
 # CONFIG_NLS_CODEPAGE_949 is not set
@@ -1201,7 +1202,7 @@ CONFIG_NLS_CODEPAGE_437=y
 # CONFIG_NLS_CODEPAGE_1250 is not set
 # CONFIG_NLS_CODEPAGE_1251 is not set
 # CONFIG_NLS_ASCII is not set
-# CONFIG_NLS_ISO8859_1 is not set
+CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_ISO8859_2 is not set
 # CONFIG_NLS_ISO8859_3 is not set
 # CONFIG_NLS_ISO8859_4 is not set
