--- a/trunk/libs/mbedtls/Makefile
+++ b/trunk/libs/mbedtls/Makefile
@@ -1,5 +1,5 @@
-SRC_NAME=mbedtls-2.7.7
-SRC_URL=https://tls.mbed.org/download/mbedtls-2.7.7-apache.tgz
+SRC_NAME=mbedtls-2.7.9
+SRC_URL=https://tls.mbed.org/download/mbedtls-2.7.9-gpl.tgz
 
 all: download_test extract_test config_test
 	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)/build
