--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -127,10 +127,7 @@ endif
 
 ifdef CONFIG_USB_SUPPORT
 LIBS_INCLUDE_LIBUSB_1=y
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_DUMP1090),y)
-LIBS_INCLUDE_LIBRTLSDR=y
-endif
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_RTL_SDR),y)
+ifneq ($(filter y,$(CONFIG_FIRMWARE_INCLUDE_DUMP1090) $(CONFIG_FIRMWARE_INCLUDE_RTL_SDR)),)
 LIBS_INCLUDE_LIBRTLSDR=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_U2EC),y)
@@ -168,21 +165,7 @@ LIBS_INCLUDE_LIBSSL=y
 LIBS_INCLUDE_LIBPCAP=y
 endif
 
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT),y)
-LIBS_INCLUDE_READLINE=y
-LIBS_INCLUDE_LIBSSL=y
-LIBS_INCLUDE_LIBICONV=y
-LIBS_INCLUDE_NCURSES=y
-endif
-
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD),y)
-LIBS_INCLUDE_READLINE=y
-LIBS_INCLUDE_LIBSSL=y
-LIBS_INCLUDE_LIBICONV=y
-LIBS_INCLUDE_NCURSES=y
-endif
-
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER),y)
+ifneq ($(filter y,$(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT) $(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD) $(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER)),)
 LIBS_INCLUDE_READLINE=y
 LIBS_INCLUDE_LIBSSL=y
 LIBS_INCLUDE_LIBICONV=y
