--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -22,10 +22,7 @@ FS_NTFS_ENABLED=n
 STORAGE_ENABLED=n
 OPENSSH_ENABLED=n
 DROPBEAR_ENABLED=n
-TTYD_ENABLED=n
-HTOP_ENABLE=n
 SAMBA_ENABLED=n
-CHNROUTE_ENABLED=n
 ARIA2_ENABLED=n
 SOFTETHERVPN_ENABLE=n
 SHADOWSOCKS_ENABLE=n
@@ -39,14 +36,6 @@ endif
 endif
 else
 OPENSSH_ENABLED=y
-endif
-
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_TTYD),y)
-TTYD_ENABLED=y
-endif
-
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_HTOP),y)
-HTOP_ENABLE=y
 endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_WINS),y)
@@ -87,31 +76,16 @@ endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA),y)
 ARIA2_ENABLED=y
 endif
+
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN),y)
 ARIA2_ENABLED=y
 endif
 
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
-CHNROUTE_ENABLED=y
-endif
-
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD),y)
+ifneq ($(filter y,$(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD) $(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT) $(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER)),)
 SOFTETHERVPN_ENABLE=y
 endif
 
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT),y)
-SOFTETHERVPN_ENABLE=y
-endif
-
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER),y)
-SOFTETHERVPN_ENABLE=y
-endif
-
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SSSERVER),y)
-SHADOWSOCKS_ENABLE=y
-endif
-
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
+ifneq ($(filter y,$(CONFIG_FIRMWARE_INCLUDE_SSSERVER) $(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS)),)
 SHADOWSOCKS_ENABLE=y
 endif
 
@@ -157,7 +131,7 @@ dir_y						+= scripts
 dir_y						+= util-linux
 dir_$(OPENSSH_ENABLED)				+= openssh
 dir_$(DROPBEAR_ENABLED)				+= dropbear
-dir_$(HTOP_ENABLE)					+= htop
+dir_$(CONFIG_FIRMWARE_INCLUDE_HTOP)		+= htop
 dir_$(CONFIG_FIRMWARE_INCLUDE_NANO)		+= nano
 dir_$(CONFIG_FIRMWARE_INCLUDE_OPENVPN)		+= openvpn
 dir_$(CONFIG_FIRMWARE_INCLUDE_SSWAN)		+= strongswan
@@ -169,8 +143,8 @@ dir_$(SAMBA_ENABLED)				+= samba36
 else
 dir_$(SAMBA_ENABLED)				+= samba3
 endif
-dir_$(CHNROUTE_ENABLED)				+= chnroute
-dir_$(TTYD_ENABLED)					+= ttyd
+dir_$(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS)	+= chnroute
+dir_$(CONFIG_FIRMWARE_INCLUDE_TTYD)		+= ttyd
 dir_$(SOFTETHERVPN_ENABLE)			+= softethervpn
 dir_$(CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT)         += scutclient
 dir_$(CONFIG_FIRMWARE_INCLUDE_VLMCSD)			+= vlmcsd
