--- a/trunk/user/aria2/Makefile
+++ b/trunk/user/aria2/Makefile
@@ -29,6 +29,7 @@ extract_test:
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN),y)
 	( if [ ! -d $(SRC_NAME) ]; then \
 		tar zxf $(SRC_NAME).tar.gz; \
+		patch -d $(SRC_NAME) -p1 -i ../disable-doc-test.patch; \
 	fi )
 endif
 
