--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -100,11 +100,12 @@ LIBS_INCLUDE_CURL=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA),y)
 LIBS_INCLUDE_LIBSSL=y
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN),y)
 LIBS_INCLUDE_LIBXML2=y
+endif
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN),y)
 LIBS_INCLUDE_LIBSSL=y
-LIBS_INCLUDE_LIBXML2=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_MINIDLNA),y)
 LIBS_INCLUDE_LIBICONV=y
