MZ-R13P: fix template config

--- a/trunk/configs/templates/MZ-R13P.config
+++ b/trunk/configs/templates/MZ-R13P.config
@@ -19,6 +19,10 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 ### 4.1 = MT7628 v4.1.0.0
 CONFIG_FIRMWARE_WIFI2_DRIVER=4.1
 
+### Kernel driver select for WiFi AP 5GHz
+### 3.0 = MT7610E v3.0.0.9
+CONFIG_FIRMWARE_WIFI5_DRIVER=3.0
+
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
