util-linux: fix build error

--- a/trunk/user/util-linux/Makefile
+++ b/trunk/user/util-linux/Makefile
@@ -47,6 +47,7 @@ configure:
 	./configure \
 		--prefix=$(STAGEDIR) \
 		--without-tinfo \
+		--without-ncurses \
 		--without-user \
 		--without-cap-ng \
 		--without-util \
