make modules_prepare for kmod build

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -176,7 +176,7 @@ dep:
 		echo "ERROR: you need to do a 'make config' first" ; \
 		exit 1 ; \
 	fi
-	$(MAKEARCH_KERNEL) -C $(LINUXDIR) prepare
+	$(MAKEARCH_KERNEL) -C $(LINUXDIR) modules_prepare
 	$(MAKEARCH_KERNEL) -C $(LINUXDIR) dep
 
 .PHONY: tools
